assets/css/custom.css
---
---

@import url('https://fonts.googleapis.com/css?family=Noto+Sans');

@media only screen and (max-width: 800px) {
  nav {
    width: 90% !important;
  }

  #container {
    width: 90%;
  }

  .lambda-card {
    width: 90% !important;
  }

  .post-image-container {
    width: 80% !important;
  }

  .post-card {
    width: 80% !important;
    padding: 10px 20px 20px 20px !important;
  }

  .post-description-container > .description {
    display: none;
  }
}

* {
  font-family: 'Noto Sans', sans-serif;
}

body {
  margin: 0;
  line-height: 1.75;
}

.container {
  width: 65%;
  margin: 0 auto;
}

.body-text {
  font-size: 11pt;
  margin-top: 2em;
}

.bullet {
  margin-top: 0.15em;
  margin-bottom: 0;
}

.bullet-last {
  margin-top: 0.15em;
}

.center {
  margin: 0 auto;
  text-align: center;
}

.contact {
  width: 10%;
}

.contact-container {
  position: relative;
  display: inline;
  margin: 0 1.25%;
  text-decoration: none;
}

#copy-link {
  color: white;
  border-color: white;
}

#download {
  height: 1.5em;
}

.footer-space {
  margin-bottom: 4em;
}

.header {
  background-color: black;
  font-size: 13pt;
  height: 2.5em;
}

.header-div {
  width: 33%;
  margin: 0 auto;
}

.hidden {
  visibility: hidden;
}

.post-image-container {
  margin: 0 auto;
  width: 50%;
}

.post-image {
  max-width: 100%;
}

.post-image-caption {
  text-align: center;
  max-width: 90%;
  word-wrap: break-word;
  font-style: italic;
  opacity: 0.65;
}

iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.iframe-container {
  position: relative;
  width: 100%;
  height: 0;
  padding-bottom: 56.25%;
}

.left {
  float: left;
}

.line-head {
  margin-bottom: 0;
}

.logo {
  max-width: 11%;
  vertical-align: middle;
}

.logo-container {
  position: relative;
  display: inline;
  margin: 0 1%;
}

#logos {
  margin: 20px auto;
  text-align: center;
}

nav {
  height: 100%;
  width: 65%;
  margin: 0 auto;
}

.nav-link {
  display: inline-block;
  text-decoration: none;
  color: white;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

.nocode {
  color: white !important;
}

.no-pointer {
  cursor: none;
}

#pgp-key {
  font-family: monospace;
  font-size: 11pt;
  padding: 0;
  border-width: 0;
  resize: none;
  display: block;
  cursor: pointer;
}

.post-date {
  margin-top: 0;
  margin-bottom: 2em;
  color: #555;
}

.post-head {
  margin-bottom: 0.25em;
}

.post-card {
  margin: 15px auto;
  width: 85%;
  text-align: center;
  background-color: black;
  padding: 10px 30px 20px 30px;
  border-style: solid;
  border-radius: 5px;
  border-width: 2px;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: -8px;
  cursor: pointer;
}

.post-description-container {
  margin: 8px 0;
}

.post-description-container a {
  color: #d1ccc0;
  font-family: monospace;
  text-decoration: none;
}

.post-card-title a {
  font-size: 1.5em;
  font-family: monospace;
  text-decoration: none;
}

#resume {
  margin: 20px auto;
}

.resume-border {
  border-style: solid;
  border-color: #666;
  border-radius: 5px;
  border-width: 1px;
  padding: 15px;
}

.resume-button {
  border-color: black;
  border-radius: 5px;
  font-size: 8pt;
  font-weight: bold;
  margin-left: 3px;
  border-width: 1px;
  border-style: solid;
  vertical-align: middle;
  height: 100%;
  padding: 2px 5px;
  cursor: pointer;
  text-decoration: none;
  color: black;
}

.resume-button-wrapper {
  display: block;
  height: 1.5em;
}

.right {
  float: right;
  text-align: right;
}

/* syntax highlighting */

pre,
code {
  background-color: #efefef;
  font-family: monospace;
  padding: 1px 5px;
}

pre {
  word-wrap: break-word;
  display: inline-block;
}

pre.prettyprint {
  border: 0 !important;
  margin: 0 !important;
}

.prettyprint span {
  font-family: monospace;
  text-decoration: none !important;
}

/* lambda post */

.lambda-card {
  margin: 15px auto;
  max-width: 450px;
  width: 60%;
  text-align: center;
  color: white;
  background-color: black;
  padding: 10px 20px;
  border-style: solid;
  border-radius: 5px;
  border-width: 2px;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: -8px;
}

.syntax-container, .syntax {
  margin: 8px 0;
}

.js-syntax, .es6-syntax, .lambda-syntax {
  color: #d1ccc0;
  font-size: 1.15em;
  font-family: monospace;
}

.lambda-buttons button {
  background-color: inherit;
  color: #d1ccc0;
  border-radius: 5px;
}

.lambda-buttons button:disabled {
  background-color: inherit;
  color: #d1ccc0;
  border-radius: 5px;
  border-color: #d1ccc0 !important;
}

.lambda-explanation {
  width: 90%;
  color: #d1ccc0;
  font-style: italic;
  margin: 15px auto 8px auto;
  padding-top: 5px;
  border-top-style: solid;
  border-top-width: 1px;
  min-height: 2.5em;
}

.lambda-title {
  font-size: 1.25em;
}

